--- a/SPAView/src/index.html
+++ b/SPAView/src/index.html
@@ -7,13 +7,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="CoreUI - Free Angular Admin Template">
-  <meta name="author" content="Łukasz Holeczek">
-  <meta name="keyword" content="Bootstrap,Admin,Template,Free,Angular,Dashboard,Typescript">
+  <meta name="author" content="Vaqef Payfoon">
+  <meta name="keyword" content="فرش, فرش دست بافت">
 	<link rel="shortcut icon" href="assets/favicon.ico">
-	<title>CoreUI - Free Angular Admin Template</title>
+	<title>فرش بوم</title>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-118965717-3"></script>
-  <script>
+  <!-- <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
@@ -21,7 +21,7 @@
     gtag('config', 'UA-118965717-3');
     // Angular ID
     gtag('config', 'UA-118965717-4');
-  </script>
+  </script> -->
 
 </head>
 <body class="app">
